Fixed overflow error

--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,13 @@
 body
 {
     margin: 0px;
-    overflow: hidden;
 }
 
 .full-scr
 {
     height: 100vh;
     width: 100vw;
+    position: fixed;
 }
 
 .background-img
@@ -110,6 +110,7 @@ body
     font-weight: normal;
     font-size: 4vw;
     margin-bottom: 0px;
+    position: relative;
 }
 
 .sub-p
@@ -118,6 +119,7 @@ body
     font-weight: normal;
     font-size: 2vw;
     margin-top: 0px;
+    position: relative;
 }
 
 .riders-cont
